--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
     "@ionic-native/splash-screen": "4.5.3",
     "@ionic-native/status-bar": "4.5.3",
     "@ionic/storage": "^2.1.3",
+    "animate.css": "^3.6.1",
     "cordova-sqlite-storage": "^2.3.0",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
+    "ng-lottie": "^0.3.1",
     "rxjs": "5.5.7",
     "sw-toolbox": "3.6.0",
     "zone.js": "0.8.20"
